--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     tty: true
     ports:
       - "81:80"
+    extra_hosts:
+      - "dockerhost:127.0.0.1"
     volumes:
       - ./:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
