--- a/source/course/public/.htaccess
+++ b/source/course/public/.htaccess
@@ -18,4 +18,10 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Remove index.php on url
+    RewriteCond %{THE_REQUEST} ^.*index\.php
+    RewriteRule index.php(.*)$ $1 [R=301,L]
+
+    Redirect /index.html /
 </IfModule>
