--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -4,6 +4,11 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/source/course/public;
+	
+	if ($request_uri ~* "^(.*/)index\.php/*(.*)") {
+		return 301 $1$2;
+	}
+	
     location ~ \.php$ {
         try_files $uri =404;
         
